--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <header>
       <h1>Hey! <em>It's me,</em> BABA</h1>
       <aside>
-        This is my site and It’s fucking <a title="perfect" href="http://motherfuckingwebsite.com/">.
+	      This is my site and It’s fucking <a href="http://motherfuckingwebsite.com/">perfect</a>.
       </aside>
     </header>
     <h2>Why i host my site ?</h2>
