--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	    <li>Freedom of charge</li>
 	    <li>...</li>
     </ul>
-    <p>Simpley you can do anything, just with your domain and hosting. Simpley
+    <p>Simpley you can do anything, just with your domain and hosting. 
     you can host your website, email, chat server, file server... and the good thing is that you have all the control and rights on your thing If you still did't get it man you have some problem</p>
     <h2>So go buy your domain NOW!</h2>
     <p>Thats it it's just for init commit i will work on it later</p>
