--- a/index.html
+++ b/index.html
@@ -3,15 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/png" href="data:image/png;base64,">
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <title>Dixit Bhuva's Personal Site</title>
   <style>
-        @media (prefers-color-scheme: dark){
-                body {color:#fff;background:#000}
-                a:link {color:#cdf}
-                a:hover, a:visited:hover {color:#def}
-                a:visited {color:#dcf}
-        }
         body{
                 margin:1em auto;
                 max-width:40em;
@@ -20,11 +14,6 @@
         }
         h1,h2,h3 {
                 line-height:1.2
-        }
-        @media print{
-                body{
-                        max-width:none
-                }
         }
   </style>
 </head>
