--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <title>Dixit Bhuva's Personal Site</title>
+  <meta name="description" content="Also known as BABA. I'm a computer science student & youtuber who is just curious about computers in general.">
   <style>
         body{
                 margin:1em auto;
