--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 <body>
   <article>
     <header>
-      <h1>Hey! <em>It's me,</em> BABA</h1>
+      <h1 style="display:inline-block;">Hey! <em>It's me,</em> BABA</h1>
+      <img src="baba.jpg" alt="Dixit Bhuva">
       <aside>
 	      This is my site and It’s fucking <a href="http://motherfuckingwebsite.com/">perfect</a>.
       </aside>
