adjust the image

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 <body>
   <article>
     <header>
-      <h1 style="display:inline-block;">Hey! <em>It's me,</em> BABA</h1>
-      <img src="baba.jpg" alt="Dixit Bhuva">
-      <aside>
+      <h1>Hey! <em>It's me,</em> BABA</h1>
+      <aside style="display:inline-block;">
 	      This is my site and It’s fucking <a href="http://motherfuckingwebsite.com/">perfect</a>.
+      <img src="baba.jpg" alt="Dixit Bhuva">
       </aside>
     </header>
     <h2>Why i host my site ?</h2>
