--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
   <article>
     <header>
       <h1>Hey! <em>It's me,</em> BABA</h1>
-      <aside style="display:inline-block;">
+      <aside>
 	      This is my site and It’s fucking <a href="http://motherfuckingwebsite.com/">perfect</a>.
-      <img src="baba.jpg" alt="Dixit Bhuva">
       </aside>
     </header>
     <h2>Why i host my site ?</h2>
